# text-editor

./: .gitignore  README.md  pyproject.toml  vercel.json
api/: index.py
backend/: main.py
backend/editor/: cloudinary_mgr.py  file_manager.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  blots.js
